@@ -115,8 +115,7 @@ int Op_Div_EF::impr(Sortie& os) const
 {
 
   const int impr_bord=(le_dom_EF->domaine().bords_a_imprimer().est_vide() ? 0:1);
-  //SFichier Flux_div;
-  if (!Flux_div.is_open()) ouvrir_fichier(Flux_div,"",je_suis_maitre());
+  ouvrir_fichier(Flux_div,"",je_suis_maitre());
   EcrFicPartage Flux_face;
   ouvrir_fichier_partage(Flux_face,"",impr_bord);
   const Schema_Temps_base& sch = equation().probleme().schema_temps();
