@@ -139,12 +139,9 @@ int Op_Grad_VDF_Face::impr(Sortie& os) const
   // Write the boundary fluxes:
   if (je_suis_maitre())
     {
-      //SFichier Flux_grad;
-      if (!Flux_grad.is_open()) ouvrir_fichier(Flux_grad,"",1);
-      //SFichier Flux_grad_moment;
-      if (!Flux_grad_moment.is_open()) ouvrir_fichier(Flux_grad_moment,"moment",impr_mom);
-      //SFichier Flux_grad_sum;
-      if (!Flux_grad_sum.is_open()) ouvrir_fichier(Flux_grad_sum,"sum",impr_sum);
+      ouvrir_fichier(Flux_grad,"",1);
+      ouvrir_fichier(Flux_grad_moment,"moment",impr_mom);
+      ouvrir_fichier(Flux_grad_sum,"sum",impr_sum);
       Flux_grad.add_col(sch.temps_courant());
       if (impr_mom) Flux_grad_moment.add_col(sch.temps_courant());
       if (impr_sum) Flux_grad_sum.add_col(sch.temps_courant());
