@@ -908,9 +908,7 @@ int Op_Div_VEFP1B_Elem::impr(Sortie& os) const
   // Print
   if (je_suis_maitre())
     {
-      //SFichier Flux_div;
-      if (!Flux_div.is_open())
-        ouvrir_fichier(Flux_div, "", 1);
+      ouvrir_fichier(Flux_div, "", 1);
       Flux_div.add_col(temps);
       for (int num_cl = 0; num_cl < nb_cl; num_cl++)
         {
